We changed the logo to display none for mobile and tablet in the recipe pages and we changed the carousel pictures in the recipe pages

--- a/style.css
+++ b/style.css
@@ -352,3 +352,10 @@ main {
 		max-width: 60%;
 	}
 }
+
+
+/*Apply style for one of the pics in Mihaela's carusel in her page */
+
+.icecream-ball {
+	object-fit: cover;
+}
